# -2016-ZMPO-List6-

./: .gitignore  CMakeLists.txt  ConsoleApplication13.cpp  ListAllFiles.py  MetaTablesRunner.cpp  ZMPO-Lista6.docx  ZMPO_lista_1.docx  ~$PO_lista_1.docx
ElementsAndTables/: ARRAII.hpp  CTable.cpp  CTable.hpp  Person.cpp  Person.hpp  RAII.hpp
Flyweight/: Flyweight.cpp  Flyweight.h  Flyweight.hpp
Handlers/: ChangeSizeHandler.cpp  ChangeSizeHandler.h  ClearHandler.cpp  ClearHandler.h  CreateCopyHandler.cpp  CreateCopyHandler.h  CreateDefHandler.cpp  CreateDefHandler.h  CreateDefsHandler.h  CreateHandler.cpp  CreateHandler.h  CreateHandler.hpp  GetNameHandler.cpp  GetNameHandler.h  GetSizeHandler.cpp  GetSizeHandler.h  GetValueHandler.cpp  GetValueHandler.h  GoHandler.cpp  GoHandler.hpp  HelpHandler.cpp  IHandler.cpp  IHandler.h  IHandler.hpp  PrintAllHandler.cpp  PrintAllHandler.h  PrintAllHandler.hpp  PrintHandler.cpp  PrintHandler.h  RemoveAllHandler.cpp  RemoveAllHandler.h  RemoveHandler.cpp  RemoveHandler.h  SetNameHandler.cpp  SetNameHandler.h  SetValueHandler.cpp  SetValueHandler.h
MT_UT/: FlyweightProperAmountOfArgsButWrongMT.cpp  FlyweightProperArgsMT.cpp  FlyweightUnproperAmountOfArgsMT.cpp  List1.cpp  PersonUT.cpp  RAII_ARRAII_UT.cpp  TableUT.cpp
TableCtors/: HowToBoostTokenizer.txt  Output-Build.txt  TableCtors.sln
TableCtors/TableCtors/: CTable.cpp  CTable.hpp  ConcreteFlyweights.cpp  ConcreteFlyweights.h  Flyweight.cpp  Flyweight.h  FlyweightMT.cpp  FlyweightMT.cpp~RF2e3e49de.TMP  FlyweightProperAmountOfArgsButWrongMT.cpp  FlyweightProperArgsMT.cpp  FlyweightUnproperAmountOfArgsMT.cpp  FlyweightUnproperArgsMT.cpp  Interface.cpp  Interface.h  Interface.hpp  List1.cpp  RAIIFlyweightCTable.cpp  RAIIFlyweightCTable.h  ReadMe.txt  Stub.cpp  Stub.h  Stub.hpp  TableCtors.cpp  TableCtors.h  TableCtors.vcxproj  TableCtors.vcxproj.filters  TableUT.cpp  Utils.cpp  Utils.h  Utils.hpp  UtilsForMT.cpp  UtilsForMT.h  packages.config  stdafx.cpp
TableCtors/TableCtors/Handlers/: ChangeSizeHandler.cpp  ChangeSizeHandler.h  ClearHandler.cpp  CreateCopyHandler.cpp  CreateCopyHandler.h  CreateDefHandler.cpp  CreateDefHandler.h  CreateDefsHandler.cpp  CreateDefsHandler.h  CreateHandler.cpp  CreateHandler.h  GetHandler.cpp  GetHandler.h  GetNameHandler.cpp  GetNameHandler.h  GetSizeHandler.cpp  GetSizeHandler.h  GetValueHandler.cpp  GetValueHandler.h  HelpHandler.cpp  HelpHandler.h  IHandler.cpp  IHandler.h  PrintAllHandler.cpp  PrintAllHandler.h  PrintHandler.cpp  PrintHandler.h  RemoveAllHandler.cpp  RemoveAllHandler.h  RemoveHandler.cpp  RemoveHandler.h  SetNameHandler.cpp  SetNameHandler.h  SetValueHandler.cpp  SetValueHandler.h
Utils/: Exceptions.hpp  Interface.cpp  Interface.hpp  Logger.cpp  Logger.hpp  Stub.cpp  Utils.cpp  Utils.hpp  UtilsForMT.cpp
